--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "pinia": "^3.0.3",
     "router": "^2.2.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
